Migrate to Java 10 and Spring Boot 2.1.0.M3 with embedded Tomcat 9